# ha-mqtt-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  TODO.md  config.schema.json  config.toml.example  pyproject.toml
docs/: README.md  home-assistant-setup.md  roadmap.md
macos/WifiHelper/: Entitlements.plist  Info.plist  main.swift
scripts/: build-wifi-helper.sh  find-standalone-python.sh  install-launch-agent.sh  install.sh  uninstall-launch-agent.sh
src/ha_mqtt_agent/: __init__.py  __main__.py  cli.py  config.py  energy.py  mqtt.py  network.py  sensors.py
src/mac_mqtt_energy/: __init__.py  __main__.py  cli.py  config.py  energy.py  mqtt.py  sensors.py
tests/: test_cli.py  test_energy.py  test_mqtt.py  test_network.py  test_sensors.py
