[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mac-mqtt-energy"
version = "0.1.0"
description = "Publish macOS power and energy telemetry to Home Assistant over MQTT discovery."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "MarcoMC", email = "marco@marcomc.com" }
]
dependencies = [
  "paho-mqtt>=2.1.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "ruff>=0.11.0",
]

[project.scripts]
mac-mqtt-energy = "mac_mqtt_energy.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
strict = true
